--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,7 @@
 @import '~bootstrap/dist/css/bootstrap.css';
 
 // Within this project:
+// -ultra wide screen is 1100px plus (as wide screen, but with some alterations)
 // -wide screen is 960px plus (white space either side of central)
 // -medium screen is 600px to 960px (no white space, but still nav bar)
 // -narrow screen is 350px to 600px (side bar comes in)
