dialog boxes contain more information for users

--- a/src/app/pages/wildlife-advice-page/advice-response/pollinator-dialog/pollinator-dialog.component.html
+++ b/src/app/pages/wildlife-advice-page/advice-response/pollinator-dialog/pollinator-dialog.component.html
@@ -12,6 +12,11 @@
         <p><b>Latin name :</b> {{data[0].LatinName}}</p>
         <p><b>Common name :</b> {{data[0].CommonName}}</p>
         <p><b>Type :</b> {{data[0].Habit}}</p>
+        <p><b>Hardiness :</b> {{data[0].Hardiness}}</p>
+        <p><b>Preferred Soil Type :</b> {{data[0].Soil}}</p>
+        <p><b>Preferred Soil PH :</b> {{data[0].SoilPH}}</p>
+        <p><b>Preferred Shadiness :</b> {{data[0].Shadiness}}</p>
+        <p><b>Preferred Soil Moisture :</b> {{data[0].Moisture}}</p>
         <p><b>Height :</b> {{data[0].Height}}m</p>
         <p><b>Native :</b> {{data[0].Native}}</p>
     </div>
@@ -34,6 +39,11 @@
         <p><b>Latin name :</b> {{extraFlowers.LatinName}}</p>
         <p><b>Common name :</b> {{extraFlowers.CommonName}}</p>
         <p><b>Type :</b> {{extraFlowers.Habit}}</p>
+        <p><b>Hardiness :</b> {{extraFlowers.Hardiness}}</p>
+        <p><b>Preferred Soil Type :</b> {{extraFlowers.Soil}}</p>
+        <p><b>Preferred Soil PH :</b> {{extraFlowers.SoilPH}}</p>
+        <p><b>Preferred Shadiness :</b> {{extraFlowers.Shadiness}}</p>
+        <p><b>Preferred Soil Moisture :</b> {{extraFlowers.Moisture}}</p>
         <p><b>Height :</b> {{extraFlowers.Height}}m</p>
         <p><b>Native :</b> {{extraFlowers.Native}}</p>
     </div>
@@ -41,4 +51,5 @@
         <p class="CopyRightText">&copy; Image <a href="{{extraFlowers.Link}}">"{{extraFlowers.Name}}"</a> by {{extraFlowers.Username}}, distributed under {{extraFlowers.Copyright}} license.</p>
     </div>
 </div>
+<br>
 </mat-dialog-content>
