--- a/src/app/pages/wildlife-advice-page/advice-response/pollinator-dialog/pollinator-dialog.component.scss
+++ b/src/app/pages/wildlife-advice-page/advice-response/pollinator-dialog/pollinator-dialog.component.scss
@@ -1,5 +1,7 @@
 .img-dialog{
-    margin-right: 30px;
+    margin-right: 15px;
+    margin-bottom: 15px;
+    margin-top: 4px;
     object-fit: none;
     object-position: center; 
     height: 160px;
@@ -11,4 +13,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+p {
+    margin: 0 0 4px !important;
 }
