Adding more advice/info filters

--- a/src/app/display/top-display/navigation/navigation.component.html
+++ b/src/app/display/top-display/navigation/navigation.component.html
@@ -1,3 +1,6 @@
+<!-- There is currently a strange small glitch where a small gap appears above the toolbar if you scroll down
+to the very bottom of wildlife advice page ************** -->
+
 <mat-toolbar color="accent">
 
     <mat-toolbar-row class="menu-row">
