--- a/src/app/pages/wildlife-advice-page/advice-response/wildlife-info-generic/wildlife-info-generic.component.html
+++ b/src/app/pages/wildlife-advice-page/advice-response/wildlife-info-generic/wildlife-info-generic.component.html
@@ -2,7 +2,7 @@
 <div class="InfoHolder">
   <mat-card class="card">
     <p class="Subheader">Advice</p>
-    <mat-card-subtitle> <b> {{ infoGenericObject.Header }} :</b> {{ infoGenericObject.BodyText }} </mat-card-subtitle>
+    <mat-card-subtitle> <b> {{ infoGenericObject.Title }} :</b> {{ infoGenericObject.BodyText }} </mat-card-subtitle>
   </mat-card>
 </div>
 
