--- a/src/app/pages/wildlife-advice-page/advice-response/wildlife-info-generic/wildlife-info-generic.component.html
+++ b/src/app/pages/wildlife-advice-page/advice-response/wildlife-info-generic/wildlife-info-generic.component.html
@@ -1,7 +1,7 @@
 
 <div class="InfoHolder">
   <mat-card class="card">
-    <p class="Subheader">Advice</p>
+    <!-- <p class="Subheader">Advice</p> -->
     <mat-card-subtitle> <b> {{ infoGenericObject.Title }} :</b> {{ infoGenericObject.BodyText }} </mat-card-subtitle>
   </mat-card>
 </div>
