adding formatting for advice sections

--- a/src/app/pages/wildlife-advice-page/advice-response/pollinator-suggestions/pollinator-suggestions.component.scss
+++ b/src/app/pages/wildlife-advice-page/advice-response/pollinator-suggestions/pollinator-suggestions.component.scss
@@ -25,3 +25,8 @@
     height: 30px;
 }
 
+.SmallSubheader{
+    font-family: 'Playfair Display', serif !important;
+    font-size: 25px !important;
+    line-height: 1.1;
+  }
