--- a/src/app/pages/wildlife-advice-page/advice-response/pollinator-suggestions/pollinator-suggestions.component.html
+++ b/src/app/pages/wildlife-advice-page/advice-response/pollinator-suggestions/pollinator-suggestions.component.html
@@ -1,4 +1,4 @@
-<p class="Subheader">Plants Recommended for Your Garden</p>
+<p class="SmallSubheader">Plants Recommended for Your Garden</p>
 <p>It is helpful to have plants flowering in your garden from spring to autumn. Each plant blooms in the month specified and suits your garden, so you can make your garden a home to pollinators all year.</p>
 
 <div class="CardHolder">
