--- a/src/app/pages/wildlife-advice-page/advice-response/wildlife-advice-dialog/wildlife-advice-dialog.component.html
+++ b/src/app/pages/wildlife-advice-page/advice-response/wildlife-advice-dialog/wildlife-advice-dialog.component.html
@@ -8,7 +8,8 @@
 <mat-dialog-content>
     <div class="body">
       <img class="dialogImage" src="{{ adviceGenericObject.Pathname }}" alt="Advice_Image">
-      <p class="card-text">{{ adviceGenericObject.BodyText }}</p>
+      <!-- We have to use innerHTML to access our bodyText so the links work -->
+      <div [innerHTML]="ourBodyText"></div>
     <div>
         <p class="CopyRightText">&copy; Image <a href="{{adviceGenericObject.Link}}">"{{adviceGenericObject.Name}}"</a> by {{adviceGenericObject.Username}}, distributed under {{adviceGenericObject.Copyright}} license.</p>
     </div>
