Fixed gap above toolbar issue

--- a/src/app/display/not-home-layout/not-home-layout.component.html
+++ b/src/app/display/not-home-layout/not-home-layout.component.html
@@ -2,7 +2,7 @@
 describes the central panel under the that is used by these elements. This is therefore a higher
 level layout. -->
 
-<mat-sidenav-container>
+<mat-sidenav-container fullscreen>
     <mat-sidenav #sidenav role="navigation">
       <app-sidenav-list (sidenavClose)="sidenav.close()"></app-sidenav-list>
     </mat-sidenav>
